chore: 优化策略组命名，调整全球优选顺序

--- a/clash-config.ini
+++ b/clash-config.ini
@@ -37,24 +37,24 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;=========================================
 
 ;=== 主选择器 ===
-custom_proxy_group=🚀 节点选择`select`[]🎯 智能优选`[]🔄 全能优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🎯 非港优选`[]🔄 全球优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 
 ;=== 智能优选组 (fallback + url-test) ===
 ; AI专用 - 完全排除HKG
-custom_proxy_group=🎯 智能优选`fallback`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🎯 非港优选`fallback`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300
 
-; 通用 - 可包含HKG
-custom_proxy_group=🔄 全能优选`fallback`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300
+; 通用 - 香港优先
+custom_proxy_group=🔄 全球优选`fallback`[]♻️ 全球自动`[]🇭🇰 香港节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300
 
 ;=== 自动测速组 ===
 custom_proxy_group=♻️ 全球自动`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 非港自动`url-test`^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)).*$`http://www.gstatic.com/generate_204`300,,50
 
 ;=== AI 服务组 ===
-custom_proxy_group=🤖 OpenAI`select`[]🎯 智能优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
-custom_proxy_group=🧠 Claude`select`[]🎯 智能优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
-custom_proxy_group=🔍 Google`select`[]🚀 节点选择`[]🎯 智能优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]☑️ 手动切换
+custom_proxy_group=🤖 OpenAI`select`[]🎯 非港优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
+custom_proxy_group=🧠 Claude`select`[]🎯 非港优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
+custom_proxy_group=🔍 Google`select`[]🚀 节点选择`[]🎯 非港优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]☑️ 手动切换
 
 ;=== 应用服务组 ===
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]☑️ 手动切换
