--- a/clash-config.ini
+++ b/clash-config.ini
@@ -37,7 +37,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;=========================================
 
 ;=== 主选择器 ===
-custom_proxy_group=🚀 节点选择`select`[]🎯 非港优选`[]🔄 全球优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🔄 全球优选`[]🎯 非港优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 
 ;=== 智能优选组 (fallback + url-test) ===
