--- a/clash-config.ini
+++ b/clash-config.ini
@@ -54,7 +54,7 @@ custom_proxy_group=🌐 非港自动`url-test`^(?!.*(港|HK|hk|Hong Kong|HongKon
 ;=== AI 服务组 ===
 custom_proxy_group=🤖 OpenAI`select`[]🎯 非港优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
 custom_proxy_group=🧠 Claude`select`[]🎯 非港优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
-custom_proxy_group=🔍 Google`select`[]🚀 节点选择`[]🎯 非港优选`[]♻️ 全球自动`[]🇸🇬 新加坡节点`[]☑️ 手动切换
+custom_proxy_group=🔍 Google`select`[]🎯 非港优选`[]🌐 非港自动`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]☑️ 手动切换
 
 ;=== 应用服务组 ===
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]☑️ 手动切换
